dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/index/index.alg
algoritmo "erro argumento procedimento"

var
x: vetor[1..2] de inteiro

inicio

    escreval(x[5])

fimalgoritmo
